# Datareturn

./: README.md
dataReturn/shmdata/: CMakeLists.txt  build_q++.sh
dataReturn/shmdata/cmake/: FindOpenCL.cmake  h3.toolchain.cmake  qnx.toolchain.cmake
dataReturn/shmdata/include/: BusSignals_enums.h  BusSignals_status.h  Compiler.h  Compiler_Cfg.h  CtApIPFR.description  CtApIPFR_CS.description  CtApImageProcess_FreeRunning_EventId.h  CtApImageProcess_FreeRunning_MemMap.h  Logmap.h  MemMap.h  MotionWise_KVS_CtApImageProcess_FreeRunning_Ethernet.a2l  Platform_Types.h  Ra_Transmit.h  Ra_Type.py  Rte.h  Rte_Cbk.h  Rte_Cfg.h  Rte_Compiler_Cfg.h  Rte_CtApImageProcess_FreeRunning.h  Rte_DataHandleType.h  Rte_Hook.h  Rte_Main.h  Rte_MemMap.h  Rte_Type.h  Rte_Type.h.vector  Rte_UserTypes.h  Std_RTE_Types.h  Std_Types.h  bdlif.h  easylog.h
dataReturn/shmdata/include_common/: GLogHelper.h  MirrorDataManager_Entry.hpp  MirrorDataManager_Uploader.hpp  RQueue.h  datacommon.h  datamirror.h  vssapi.h  vsstype.h
dataReturn/shmdata/src/: GLogHelper.cpp  MirrorDataManager_Uploader.cpp  dataMirrorDemo.cpp  dataUploadDemo.cpp  ftls_stub.cpp  rte_stub.hpp  server.cpp
dataReturn/shmdata/tools/: sendCode.sh  sendToIECU.sh  shmClient  shmServer
